# Image-Editor

./: .clang-format  .clang-tidy  .gitignore  README.md
.github/workflows/: ci.yml
App/: CMakeLists.txt  ImageEditor  main.cpp
App/Back/: Back.cpp  Back.hpp
App/Brush/: Brush.cpp  Brush.hpp
App/Button/: Button.cpp  Button.hpp
App/FileField/: FileField.cpp  FileField.hpp
App/Image/: Image.cpp  Image.hpp
App/InputField/: InputField.cpp  InputField.hpp
App/InputWindow/: InputWindow.cpp  InputWindow.hpp
App/MainMethods/: MainMethods.cpp  MainMethods.hpp
App/MainWindow/: MainWindow.cpp  MainWindow.hpp
App/MainWindow/Interface/: Interface.cpp  Interface.hpp
App/MainWindow/Interface/Config/: Config.cpp
App/MainWindow/Interface/Positions/: Positions.cpp
App/MainWindow/Interface/Windows/: Windows.cpp
App/StatusBar/: StatusBar.cpp  StatusBar.hpp
